modded index.html and style.css pages

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="./style.css">
 
 
 </head>
 <body>
-    <!--Top Header Logo +Links -->
+    <!--Top Header Logo + Links -->
     <div class="header">
         <div>Header Logo</div>
         <ul class="links">
@@ -28,6 +29,41 @@
         </div>
     </div>
 
+    <!--Random information + 4 pictures-->
+    <div class="section-two">
+        <div>Some random information</div>
+        <div class="cards">
+            <div class="card"></div>
+            <div class="card-text">this is some subtext under an illustraion or image </div>
+            <div class="card"></div>
+            <div class="card-text">this is some subtext under an illustraion or image </div>
+            <div class="card"></div>
+            <div class="card-text">this is some subtext under an illustraion or image </div>
+            <div class="card"></div>
+            <div class="card-text">this is some subtext under an illustraion or image </div>
+        </div>
+    </div>
+
+    <!--Inspirational quote-->
+    <div class="section-three">
+        <div class="quote">Don't believe everything you read on the internet</div>
+        <div class="signature">-George Washington, former child</div>
+    </div>
+
+    <!--Call to action!-->
+    <div class="section-four">
+        <div class="action">
+            <div>Call to action! It's time!</div>
+            <div>Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button>Sign up</button>
+    </div>
+
+    <!--Footer-->
+    <div class="footer">
+        <duv>Copyright &copy; The Odin Project 2022</div>
+    </div>
+        
     
 </body>
 </html>
